# ChangeLog for sci-electronics/qelectrotech
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

*qelectrotech-0.2_rc2 (22 Jun 2009)

  22 Jun 2009; Markos Chandras <hwoarang@gentoo.org>
  +qelectrotech-0.2_rc2.ebuild:
  Version bump

*qelectrotech-0.2_rc1 (14 Jun 2009)

  14 Jun 2009; Markos Chandras <hwoarang@gentoo.org>
  +qelectrotech-0.2_rc1.ebuild, +metadata.xml:
  Initial commit of qelectrotech
