@@ -1,6 +1,4 @@
-DIST qelectrotech-0.2rc1-src.tar.gz 7497199 RMD160 940e4c7909909dfb4a9b7ba3ae95767f1be05172 SHA1 b927b5c51efc663968b64ae0f834d38d6f2bd9e5 SHA256 9dc5cb5c2bfa3a7d2a60e5707a5ca899d135759e6195efdbfe7c0dad7ed843f2
-DIST qelectrotech-0.2rc2-src.tar.gz 7530544 RMD160 d504782d0ed69422c080c16a9fab1527c82da57f SHA1 b35bdfba3ccfb0c95a4ef2c55cd2bca044e142ef SHA256 07aa6defdd37c028337fffe501c8823563241aa29bd5fcb92135c6c94bea73f3
-EBUILD qelectrotech-0.2_rc1.ebuild 820 RMD160 0bd96bde36909c9c7fa6616548213e91851731ba SHA1 20758268a1e020b2a96130f2c4b57d4d00e5b876 SHA256 7087e839c2ce04679e8e92e9490d792447b42195348e1bdb9aaeed5827d32c66
-EBUILD qelectrotech-0.2_rc2.ebuild 820 RMD160 76788103096476a792547a922b62da29912eb22d SHA1 e4196d653bdae9b0fd6494e0ef9d1acc33be4b24 SHA256 0c7c78569078172b46b04fba8129dc5dc25d34b413193e1dea146bba7d859f0e
-MISC ChangeLog 438 RMD160 da60cf8bb479e1f1f7d2eb533d251a89599c9a8c SHA1 2c593dca0aa1b7a8050d24629e543e2f121677ec SHA256 c5459ecb3e8710f530156dc0a73c44ed7755d242d58e1a358e1abcbcb8593bfa
+DIST qelectrotech-0.2-src.tar.gz 7531040 RMD160 f38efc6bcc94170d1e9ef125ab991194553365a2 SHA1 85b4a43a9a86f89861907c5dd9b82e41f64ea599 SHA256 6c8c81aee4dd258ddb3ed55cde83548d0b6b301286785c3c5fad55500c23818c
+EBUILD qelectrotech-0.2.ebuild 800 RMD160 4df8c8eefbb4aa3831084bea65c5509887727676 SHA1 1d6acf8213dc48ade8196d144c0e21b099e6fe31 SHA256 49e3221f3e9c02101307fdadc98a95236601f8d65a57522e6d342f60501a7688
+MISC ChangeLog 650 RMD160 c9966a30297988d3229887bee195c22eae479aa6 SHA1 8a6a8b853a43798975670c8be30d1a6c4ab60657 SHA256 8d85cee38e36c92ba6e29ba08f8a2a68cd32e4b57bb4c55731960748e964c306
 MISC metadata.xml 294 RMD160 ac4e1baa0a1839ae0a807a9d4b915134788d6aa1 SHA1 82865de14486cb30dc9ebfe6f1aecc9c86c0075b SHA256 209af586ae032f00659b69da17d4186854660be14b244d31aa0bea2005c2c5ba
