@@ -2,6 +2,13 @@
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*qelectrotech-0.2 (27 Jun 2009)
+
+  27 Jun 2009; Markos Chandras <hwoarang@gentoo.org>
+  -qelectrotech-0.2_rc1.ebuild, -qelectrotech-0.2_rc2.ebuild,
+  +qelectrotech-0.2.ebuild:
+  Version bump, remove _rc ebuilds
+
 *qelectrotech-0.2_rc2 (22 Jun 2009)
 
   22 Jun 2009; Markos Chandras <hwoarang@gentoo.org>
